fix menu overflow scroll

--- a/src/styles/blocks/menu.scss
+++ b/src/styles/blocks/menu.scss
@@ -8,6 +8,7 @@
     height: 100vh;
     max-width: 1146px;
     margin: 0 auto;
+    overflow: scroll;
 
     @include padding-header;
   }
@@ -39,5 +40,10 @@
 
   &__button {
     margin: 0 auto;
+  }
+
+  &__button_container {
+    margin: 0 auto;
+    margin-bottom: 50px;
   }
 }
